Fixed css z-indexes for cursor

--- a/src/styles/components/cursor.scss
+++ b/src/styles/components/cursor.scss
@@ -20,7 +20,7 @@
       transform: translate(-65px,-65px);
       pointer-events: none;
       mix-blend-mode: difference;
-      z-index: 4;
+      z-index: 5;
 
     }
     width: 6px;
