--- a/src/styles/components/player.scss
+++ b/src/styles/components/player.scss
@@ -5,7 +5,6 @@
   color: var(--white);
   font-size: var(--font-size-s);
   width: 250px;
-  z-index: 3;
   margin-bottom: 4rem;
   left: 50%;
   z-index: 4;
