--- a/src/styles/layout/loader.scss
+++ b/src/styles/layout/loader.scss
@@ -5,7 +5,7 @@
   bottom: 0;
   right: 0;
   background-color: var(--dark);
-  z-index: 5;
+  z-index: 6;
   display: flex;
   align-items: center;
   justify-content: space-around;
